Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,28 +81,63 @@
     // Example JSON array with news objects
     const newsData = [
   {
-    "title": "Vô sinh sau 4 lần nạo hút thai",
-    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
-    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao chị Thùy lại bị vô sinh?",
+    "title": "Xe điện 4 bánh ở TP.HCM hoạt động trở lại từ chiều 14-3",
+    "content": "Xe điện 4 bánh tại TP.HCM sẽ hoạt động trở lại từ chiều 14-3-2025 sau thời gian tạm ngừng do vướng quy định mới trong nghị định 165/2024. Sở Giao thông công chánh TP.HCM đã yêu cầu Công ty TNHH Saigon Public Transport rà soát các tuyến đường phù hợp và tiếp tục phục vụ khách du lịch đến hết ngày 30-6-2025. Cục Cảnh sát giao thông cũng đã có văn bản giải quyết khó khăn cho hoạt động xe điện 4 bánh, khẳng định sự cần thiết phải tuân thủ quy định về an toàn giao thông.",
+    "link": "https://tuoitre.vn/xe-dien-4-banh-o-tp-hcm-hoat-dong-tro-lai-tu-chieu-14-3-20250314174811681.htm",
+    "cat": "du-lich",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Xe điện 4 bánh ở TP.HCM sẽ hoạt động trở lại vào thời gian nào?",
     "answers": [
       {
-        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
+        "text": "Chiều 14-3-2025",
         "correct": true
       },
       {
-        "text": "Vì tuổi tác quá lớn",
+        "text": "Ngày 1-4-2025",
         "correct": false
       },
       {
-        "text": "Do không chăm sóc sức khỏe",
+        "text": "Ngày 30-6-2025",
         "correct": false
       },
       {
-        "text": "Vì không ăn uống đầy đủ",
+        "text": "Ngày 14-3-2024",
+        "correct": false
+      },
+      {
+        "text": "Ngày 1-5-2025",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Công an ra khuyến cáo về đăng tải hình ảnh bản đồ Việt Nam trên mạng xã hội",
+    "content": "Công an tỉnh Thái Bình đã đưa ra khuyến cáo về việc đăng tải hình ảnh bản đồ Việt Nam trên mạng xã hội. Họ nhấn mạnh rằng một số hình ảnh không thể hiện đầy đủ chủ quyền quốc gia, đặc biệt là đối với hai quần đảo Hoàng Sa và Trường Sa, có thể gây ảnh hưởng xấu đến ý thức bảo vệ chủ quyền biên giới. Công an kêu gọi người dân nâng cao cảnh giác và không chia sẻ hình ảnh bản đồ chưa được kiểm chứng.",
+    "link": "https://tuoitre.vn/cong-an-ra-khuyen-cao-ve-dang-tai-hinh-anh-ban-do-viet-nam-tren-mang-xa-hoi-20250314173509152.htm",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Tại sao Công an Thái Bình khuyến cáo người dân cẩn trọng khi đăng tải hình ảnh bản đồ Việt Nam trên mạng xã hội?",
+    "answers": [
+      {
+        "text": "Vì có nguy cơ vi phạm chủ quyền biên giới quốc gia.",
+        "correct": true
+      },
+      {
+        "text": "Để khuyến khích mọi người chia sẻ nhiều hơn.",
+        "correct": false
+      },
+      {
+        "text": "Để đảm bảo an toàn thông tin cá nhân.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng cường quảng bá du lịch Việt Nam.",
+        "correct": false
+      },
+      {
+        "text": "Để hỗ trợ quảng cáo sản phẩm trong nước.",
         "correct": false
       }
     ]
@@ -134,6 +169,33 @@
       },
       {
         "text": "Đầu tư vào bất động sản",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vô sinh sau 4 lần nạo hút thai",
+    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
+    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao chị Thùy lại bị vô sinh?",
+    "answers": [
+      {
+        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
+        "correct": true
+      },
+      {
+        "text": "Vì tuổi tác quá lớn",
+        "correct": false
+      },
+      {
+        "text": "Do không chăm sóc sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Vì không ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -676,33 +738,6 @@
     ]
   },
   {
-    "title": "6 vitamin, khoáng chất cần thiết cho não",
-    "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
-    "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những vitamin và khoáng chất nào cần thiết cho não?",
-    "answers": [
-      {
-        "text": "Vitamin D, B, magie, omega-3, kẽm",
-        "correct": true
-      },
-      {
-        "text": "Vitamin C, D, sắt",
-        "correct": false
-      },
-      {
-        "text": "Canxi, vitamin E, kali",
-        "correct": false
-      },
-      {
-        "text": "Vitamin B, A, kẽm, magie",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Béo phì nhưng suy dinh dưỡng do ăn kiêng sai cách",
     "content": "Chị Liên, 41 tuổi, nặng 67 kg, đã giảm béo bằng cách ăn kiêng khắc nghiệt nhưng vẫn bị béo phì và suy dinh dưỡng. Sau khi giảm cân bằng cách cắt giảm tinh bột và đồ ngọt, chị gặp phải tình trạng thiếu vitamin D và suy dinh dưỡng do không nạp đủ chất dinh dưỡng cần thiết. Bác sĩ khuyến cáo rằng chế độ ăn kiêng như vậy không hiệu quả và cần có kế hoạch ăn uống hợp lý hơn để giảm cân an toàn.",
     "link": "https://vnexpress.net/beo-phi-nhung-suy-dinh-duong-do-an-kieng-sai-cach-4861383.html",
@@ -725,6 +760,33 @@
       },
       {
         "text": "Chị Liên ăn quá nhiều thực phẩm chức năng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 vitamin, khoáng chất cần thiết cho não",
+    "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
+    "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những vitamin và khoáng chất nào cần thiết cho não?",
+    "answers": [
+      {
+        "text": "Vitamin D, B, magie, omega-3, kẽm",
+        "correct": true
+      },
+      {
+        "text": "Vitamin C, D, sắt",
+        "correct": false
+      },
+      {
+        "text": "Canxi, vitamin E, kali",
+        "correct": false
+      },
+      {
+        "text": "Vitamin B, A, kẽm, magie",
         "correct": false
       }
     ]
@@ -3949,28 +4011,28 @@
     ]
   },
   {
-    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
-    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
-    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 8,
     "importance": 9,
-    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
     "answers": [
       {
-        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
         "correct": true
       },
       {
-        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
+        "text": "Vì tiêm vaccine là bắt buộc.",
         "correct": false
       },
       {
-        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
+        "text": "Để giảm cân.",
         "correct": false
       },
       {
-        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
         "correct": false
       }
     ]
@@ -4003,28 +4065,28 @@
     ]
   },
   {
-    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
-    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
-    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
+    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
+    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
     "cat": "suc-khoe",
-    "positivity": 8,
+    "positivity": 7,
     "importance": 9,
-    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
     "answers": [
       {
-        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
         "correct": true
       },
       {
-        "text": "Vì tiêm vaccine là bắt buộc.",
+        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
         "correct": false
       },
       {
-        "text": "Để giảm cân.",
+        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
         "correct": false
       },
       {
-        "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
         "correct": false
       }
     ]
