Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Thiếu niên suýt hỏng thận do dị tật bẩm sinh",
+    "content": "Một thiếu niên 17 tuổi ở Đà Nẵng đã suýt mất chức năng thận do dị tật bẩm sinh niệu quản bất thường, gây tắc nghẽn nước tiểu. Bệnh nhân có triệu chứng đau thắt lưng trong nhiều tuần và được phát hiện thận phải ứ nước độ 2. Sau khi phẫu thuật để tái lập lưu thông đường tiểu, sức khỏe của bệnh nhân đã ổn định và chức năng thận đang dần cải thiện. Bác sĩ khuyến cáo mọi người nên thăm khám kịp thời nếu có triệu chứng bất thường về đường tiết niệu.",
+    "link": "https://vnexpress.net/thieu-nien-suyt-hong-than-do-di-tat-bam-sinh-4860208.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Dị tật bẩm sinh nào đã khiến thiếu niên 17 tuổi suýt hỏng thận?",
+    "answers": [
+      {
+        "text": "Niệu quản bất thường",
+        "correct": true
+      },
+      {
+        "text": "Thận trái bị tổn thương",
+        "correct": false
+      },
+      {
+        "text": "Dị tật tim bẩm sinh",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tiểu đường",
+        "correct": false
+      },
+      {
+        "text": "Viêm nhiễm đường tiết niệu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hà Nội đấu giá thành công lô gỗ sưa hơn 150 tỷ đồng",
     "content": "Ngày 14/3/2025, Hà Nội đã tổ chức đấu giá thành công lô gỗ sưa lớn nhất từ trước đến nay với giá trị lên tới 154,8 tỷ đồng, vượt mức giá khởi điểm 200 triệu đồng. Lô gỗ này bao gồm khoảng 39 m3 lõi và vỏ gỗ sưa, được thu hồi từ công tác duy tu công viên cây xanh. Phiên đấu giá diễn ra trực tuyến, thu hút sự tham gia của 12 khách hàng, trong đó có 2 khách hàng đủ điều kiện tham gia và cuối cùng, Công ty cổ phần Bất động sản Đại Như Ý từ Bắc Ninh đã trúng đấu giá.",
     "link": "https://vnexpress.net/ha-noi-dau-gia-thanh-cong-lo-go-sua-hon-150-ty-dong-4861468.html",
@@ -268,33 +299,6 @@
     ]
   },
   {
-    "title": "Vô sinh sau 4 lần nạo hút thai",
-    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
-    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao chị Thùy lại bị vô sinh?",
-    "answers": [
-      {
-        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
-        "correct": true
-      },
-      {
-        "text": "Vì tuổi tác quá lớn",
-        "correct": false
-      },
-      {
-        "text": "Do không chăm sóc sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Vì không ăn uống đầy đủ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đồng đội cũ giàu gấp bảy lần Ronaldo",
     "content": "Louis Saha, cựu cầu thủ Man Utd, đã xây dựng một sự nghiệp kinh doanh thành công với công ty AxisStars, giúp gia sản của anh tăng lên 5,6 tỷ USD, gấp bảy lần tài sản của Cristiano Ronaldo, 780 triệu USD. Saha cùng Ronaldo đã thi đấu tại Man Utd từ 2004 đến 2008 và đã giành nhiều danh hiệu. Bên cạnh đó, Saha còn nhấn mạnh tầm quan trọng của việc hỗ trợ các cựu vận động viên trong việc tìm kiếm cơ hội nghề nghiệp sau khi giải nghệ.",
     "link": "https://vnexpress.net/dong-doi-cu-giau-gap-bay-lan-ronaldo-4861379.html",
@@ -321,6 +325,33 @@
       },
       {
         "text": "Đầu tư vào bất động sản",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vô sinh sau 4 lần nạo hút thai",
+    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
+    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao chị Thùy lại bị vô sinh?",
+    "answers": [
+      {
+        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
+        "correct": true
+      },
+      {
+        "text": "Vì tuổi tác quá lớn",
+        "correct": false
+      },
+      {
+        "text": "Do không chăm sóc sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Vì không ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -863,33 +894,6 @@
     ]
   },
   {
-    "title": "6 vitamin, khoáng chất cần thiết cho não",
-    "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
-    "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những vitamin và khoáng chất nào cần thiết cho não?",
-    "answers": [
-      {
-        "text": "Vitamin D, B, magie, omega-3, kẽm",
-        "correct": true
-      },
-      {
-        "text": "Vitamin C, D, sắt",
-        "correct": false
-      },
-      {
-        "text": "Canxi, vitamin E, kali",
-        "correct": false
-      },
-      {
-        "text": "Vitamin B, A, kẽm, magie",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Béo phì nhưng suy dinh dưỡng do ăn kiêng sai cách",
     "content": "Chị Liên, 41 tuổi, nặng 67 kg, đã giảm béo bằng cách ăn kiêng khắc nghiệt nhưng vẫn bị béo phì và suy dinh dưỡng. Sau khi giảm cân bằng cách cắt giảm tinh bột và đồ ngọt, chị gặp phải tình trạng thiếu vitamin D và suy dinh dưỡng do không nạp đủ chất dinh dưỡng cần thiết. Bác sĩ khuyến cáo rằng chế độ ăn kiêng như vậy không hiệu quả và cần có kế hoạch ăn uống hợp lý hơn để giảm cân an toàn.",
     "link": "https://vnexpress.net/beo-phi-nhung-suy-dinh-duong-do-an-kieng-sai-cach-4861383.html",
@@ -912,6 +916,33 @@
       },
       {
         "text": "Chị Liên ăn quá nhiều thực phẩm chức năng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 vitamin, khoáng chất cần thiết cho não",
+    "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
+    "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những vitamin và khoáng chất nào cần thiết cho não?",
+    "answers": [
+      {
+        "text": "Vitamin D, B, magie, omega-3, kẽm",
+        "correct": true
+      },
+      {
+        "text": "Vitamin C, D, sắt",
+        "correct": false
+      },
+      {
+        "text": "Canxi, vitamin E, kali",
+        "correct": false
+      },
+      {
+        "text": "Vitamin B, A, kẽm, magie",
         "correct": false
       }
     ]
@@ -3409,33 +3440,6 @@
     ]
   },
   {
-    "title": "Làng du lịch sinh thái Pơ mu xuống cấp",
-    "content": "Làng du lịch sinh thái Pơ Mu, nằm ở huyện Tây Giang, Quảng Nam, hiện đang trong tình trạng xuống cấp nghiêm trọng. Mặc dù được xây dựng từ năm 2016 với 10 ngôi nhà sàn truyền thống nhằm phát triển du lịch cộng đồng, nhưng sau gần 10 năm, các ngôi nhà đã hư hỏng, không có người trông coi và không còn hoạt động. Dự án nâng cấp và cải tạo làng du lịch này đã được phê duyệt với kinh phí hơn 6 tỷ đồng, dự kiến hoàn thành vào năm 2026.",
-    "link": "https://vnexpress.net/lang-du-lich-sinh-thai-po-mu-xuong-cap-4860923.html",
-    "cat": "du-lich",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao làng du lịch sinh thái Pơ Mu lại xuống cấp?",
-    "answers": [
-      {
-        "text": "Vì không có người trông coi và hoạt động du lịch đã ngừng lại.",
-        "correct": true
-      },
-      {
-        "text": "Do thời tiết khắc nghiệt.",
-        "correct": false
-      },
-      {
-        "text": "Vì thiếu đầu tư từ chính quyền.",
-        "correct": false
-      },
-      {
-        "text": "Do không có khách du lịch đến thăm.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
     "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
     "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
@@ -3458,6 +3462,33 @@
       },
       {
         "text": "Khoảng 10.000 tỷ đồng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Làng du lịch sinh thái Pơ mu xuống cấp",
+    "content": "Làng du lịch sinh thái Pơ Mu, nằm ở huyện Tây Giang, Quảng Nam, hiện đang trong tình trạng xuống cấp nghiêm trọng. Mặc dù được xây dựng từ năm 2016 với 10 ngôi nhà sàn truyền thống nhằm phát triển du lịch cộng đồng, nhưng sau gần 10 năm, các ngôi nhà đã hư hỏng, không có người trông coi và không còn hoạt động. Dự án nâng cấp và cải tạo làng du lịch này đã được phê duyệt với kinh phí hơn 6 tỷ đồng, dự kiến hoàn thành vào năm 2026.",
+    "link": "https://vnexpress.net/lang-du-lich-sinh-thai-po-mu-xuong-cap-4860923.html",
+    "cat": "du-lich",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao làng du lịch sinh thái Pơ Mu lại xuống cấp?",
+    "answers": [
+      {
+        "text": "Vì không có người trông coi và hoạt động du lịch đã ngừng lại.",
+        "correct": true
+      },
+      {
+        "text": "Do thời tiết khắc nghiệt.",
+        "correct": false
+      },
+      {
+        "text": "Vì thiếu đầu tư từ chính quyền.",
+        "correct": false
+      },
+      {
+        "text": "Do không có khách du lịch đến thăm.",
         "correct": false
       }
     ]
