--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "FPT mất vị trí doanh nghiệp tư nhân số 1 sàn chứng khoán Việt Nam vào tay Vingroup",
+    "content": "FPT vừa mất vị trí doanh nghiệp tư nhân số một trên sàn chứng khoán Việt Nam vào tay Vingroup sau sự tăng trưởng mạnh mẽ của cổ phiếu VIC. Giá cổ phiếu FPT đã giảm 10% trong vòng một tháng qua, trong khi cổ phiếu VIC tăng gần 30%. Vốn hóa thị trường của Vingroup hiện đạt gần 200.000 tỉ đồng, trong khi vốn hóa của FPT giảm xuống còn hơn 193.200 tỉ đồng, dẫn đến việc FPT không còn giữ vị trí dẫn đầu như trước.",
+    "link": "https://tuoitre.vn/fpt-mat-vi-tri-doanh-nghiep-tu-nhan-so-1-san-chung-khoan-viet-nam-vao-tay-vingroup-20250314182530519.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao FPT mất vị trí doanh nghiệp tư nhân số 1 trên sàn chứng khoán Việt Nam?",
+    "answers": [
+      {
+        "text": "Do cổ phiếu VIC của Vingroup tăng trưởng mạnh mẽ.",
+        "correct": true
+      },
+      {
+        "text": "Do FPT không phát triển công nghệ mới.",
+        "correct": false
+      },
+      {
+        "text": "Do FPT bị bán ròng bởi khối ngoại.",
+        "correct": false
+      },
+      {
+        "text": "Do thị trường chứng khoán Việt Nam giảm giá.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hà Nội: Trường tư thục không được tuyển sinh lớp 1, 6 trước 31/5",
     "content": "Sở Giáo dục và Đào tạo Hà Nội đã ban hành hướng dẫn tuyển sinh cho năm học 2025-2026, trong đó yêu cầu các trường tư thục không được tuyển sinh lớp 1 và lớp 6 trước ngày 31/5. Các trường phải thực hiện công khai thủ tục tuyển sinh và đảm bảo đủ chỗ học cho học sinh. Thời gian tuyển sinh sẽ diễn ra từ ngày 31/5 đến 12/7, với các quy định cụ thể để tránh tình trạng quá tải học sinh trong lớp.",
     "link": "https://dantri.com.vn/giao-duc/ha-noi-truong-tu-thuc-khong-duoc-tuyen-sinh-lop-1-6-truoc-315-20250314182758606.htm",
@@ -201,6 +228,37 @@
       },
       {
         "text": "Chỉ cho trẻ xem phim tiếng Việt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
+    "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
+    "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
+    "answers": [
+      {
+        "text": "Không, giai đoạn ủ bệnh không có triệu chứng rõ ràng.",
+        "correct": true
+      },
+      {
+        "text": "Có, có thể nhận biết qua triệu chứng sốt nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Có, có thể thấy mụn nước xuất hiện.",
+        "correct": false
+      },
+      {
+        "text": "Có, có thể nhận biết qua đau đầu và mệt mỏi.",
+        "correct": false
+      },
+      {
+        "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
         "correct": false
       }
     ]
@@ -357,6 +415,33 @@
     ]
   },
   {
+    "title": "Vô sinh sau 4 lần nạo hút thai",
+    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
+    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao chị Thùy lại bị vô sinh?",
+    "answers": [
+      {
+        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
+        "correct": true
+      },
+      {
+        "text": "Vì tuổi tác quá lớn",
+        "correct": false
+      },
+      {
+        "text": "Do không chăm sóc sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Vì không ăn uống đầy đủ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đồng đội cũ giàu gấp bảy lần Ronaldo",
     "content": "Louis Saha, cựu cầu thủ Man Utd, đã xây dựng một sự nghiệp kinh doanh thành công với công ty AxisStars, giúp gia sản của anh tăng lên 5,6 tỷ USD, gấp bảy lần tài sản của Cristiano Ronaldo, 780 triệu USD. Saha cùng Ronaldo đã thi đấu tại Man Utd từ 2004 đến 2008 và đã giành nhiều danh hiệu. Bên cạnh đó, Saha còn nhấn mạnh tầm quan trọng của việc hỗ trợ các cựu vận động viên trong việc tìm kiếm cơ hội nghề nghiệp sau khi giải nghệ.",
     "link": "https://vnexpress.net/dong-doi-cu-giau-gap-bay-lan-ronaldo-4861379.html",
@@ -383,33 +468,6 @@
       },
       {
         "text": "Đầu tư vào bất động sản",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vô sinh sau 4 lần nạo hút thai",
-    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
-    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao chị Thùy lại bị vô sinh?",
-    "answers": [
-      {
-        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
-        "correct": true
-      },
-      {
-        "text": "Vì tuổi tác quá lớn",
-        "correct": false
-      },
-      {
-        "text": "Do không chăm sóc sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Vì không ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -952,33 +1010,6 @@
     ]
   },
   {
-    "title": "Béo phì nhưng suy dinh dưỡng do ăn kiêng sai cách",
-    "content": "Chị Liên, 41 tuổi, nặng 67 kg, đã giảm béo bằng cách ăn kiêng khắc nghiệt nhưng vẫn bị béo phì và suy dinh dưỡng. Sau khi giảm cân bằng cách cắt giảm tinh bột và đồ ngọt, chị gặp phải tình trạng thiếu vitamin D và suy dinh dưỡng do không nạp đủ chất dinh dưỡng cần thiết. Bác sĩ khuyến cáo rằng chế độ ăn kiêng như vậy không hiệu quả và cần có kế hoạch ăn uống hợp lý hơn để giảm cân an toàn.",
-    "link": "https://vnexpress.net/beo-phi-nhung-suy-dinh-duong-do-an-kieng-sai-cach-4861383.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao chị Liên lại bị béo phì nhưng vẫn suy dinh dưỡng?",
-    "answers": [
-      {
-        "text": "Vì chế độ ăn kiêng quá khắc nghiệt dẫn đến thiếu dinh dưỡng.",
-        "correct": true
-      },
-      {
-        "text": "Chị Liên không tập thể dục.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ ăn của chị Liên hoàn toàn bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Chị Liên ăn quá nhiều thực phẩm chức năng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 vitamin, khoáng chất cần thiết cho não",
     "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
     "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
@@ -1001,6 +1032,33 @@
       },
       {
         "text": "Vitamin B, A, kẽm, magie",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Béo phì nhưng suy dinh dưỡng do ăn kiêng sai cách",
+    "content": "Chị Liên, 41 tuổi, nặng 67 kg, đã giảm béo bằng cách ăn kiêng khắc nghiệt nhưng vẫn bị béo phì và suy dinh dưỡng. Sau khi giảm cân bằng cách cắt giảm tinh bột và đồ ngọt, chị gặp phải tình trạng thiếu vitamin D và suy dinh dưỡng do không nạp đủ chất dinh dưỡng cần thiết. Bác sĩ khuyến cáo rằng chế độ ăn kiêng như vậy không hiệu quả và cần có kế hoạch ăn uống hợp lý hơn để giảm cân an toàn.",
+    "link": "https://vnexpress.net/beo-phi-nhung-suy-dinh-duong-do-an-kieng-sai-cach-4861383.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao chị Liên lại bị béo phì nhưng vẫn suy dinh dưỡng?",
+    "answers": [
+      {
+        "text": "Vì chế độ ăn kiêng quá khắc nghiệt dẫn đến thiếu dinh dưỡng.",
+        "correct": true
+      },
+      {
+        "text": "Chị Liên không tập thể dục.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ ăn của chị Liên hoàn toàn bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Chị Liên ăn quá nhiều thực phẩm chức năng.",
         "correct": false
       }
     ]
@@ -1555,33 +1613,6 @@
     ]
   },
   {
-    "title": "Khi nào trẻ cần phẫu thuật nạo VA?",
-    "content": "Trẻ cần phẫu thuật nạo VA khi bị viêm VA tái phát nhiều lần, cụ thể là từ 6 lần mỗi năm trở lên hoặc khi VA quá phát gây tắc đường thở. Phẫu thuật nạo VA giúp loại bỏ mô viêm, giảm nguy cơ viêm tai giữa, viêm họng, và các bệnh lý khác. Mặc dù phẫu thuật là phương pháp cuối cùng, nhưng rất ít trường hợp tái phát VA sau khi phẫu thuật.",
-    "link": "https://vnexpress.net/khi-nao-tre-can-phau-thuat-nao-va-4861269.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Khi nào trẻ cần phẫu thuật nạo VA?",
-    "answers": [
-      {
-        "text": "Khi trẻ viêm VA tái phát trên 6 lần mỗi năm.",
-        "correct": true
-      },
-      {
-        "text": "Khi trẻ bị cảm lạnh thông thường.",
-        "correct": false
-      },
-      {
-        "text": "Khi trẻ có triệu chứng đau họng nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Khi trẻ bị viêm phổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Khó thở sau mắc cúm A có phải phổi chưa hồi phục?",
     "content": "Bài viết đề cập đến tình trạng khó thở và mệt mỏi sau khi mắc cúm A. Có thể đây là dấu hiệu cho thấy phổi chưa hồi phục hoàn toàn do virus cúm A có thể gây tổn thương tế bào phổi. Người bệnh nên kiểm tra chức năng phổi để đánh giá mức độ tổn thương và có các biện pháp phục hồi, bao gồm lối sống lành mạnh và tiêm vaccine cúm hàng năm để ngăn ngừa tái nhiễm.",
     "link": "https://vnexpress.net/kho-tho-sau-mac-cum-a-co-phai-phoi-chua-hoi-phuc-4861323.html",
@@ -1604,6 +1635,33 @@
       },
       {
         "text": "Có, chỉ cần nghỉ ngơi là đủ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khi nào trẻ cần phẫu thuật nạo VA?",
+    "content": "Trẻ cần phẫu thuật nạo VA khi bị viêm VA tái phát nhiều lần, cụ thể là từ 6 lần mỗi năm trở lên hoặc khi VA quá phát gây tắc đường thở. Phẫu thuật nạo VA giúp loại bỏ mô viêm, giảm nguy cơ viêm tai giữa, viêm họng, và các bệnh lý khác. Mặc dù phẫu thuật là phương pháp cuối cùng, nhưng rất ít trường hợp tái phát VA sau khi phẫu thuật.",
+    "link": "https://vnexpress.net/khi-nao-tre-can-phau-thuat-nao-va-4861269.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Khi nào trẻ cần phẫu thuật nạo VA?",
+    "answers": [
+      {
+        "text": "Khi trẻ viêm VA tái phát trên 6 lần mỗi năm.",
+        "correct": true
+      },
+      {
+        "text": "Khi trẻ bị cảm lạnh thông thường.",
+        "correct": false
+      },
+      {
+        "text": "Khi trẻ có triệu chứng đau họng nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Khi trẻ bị viêm phổi.",
         "correct": false
       }
     ]
@@ -1810,6 +1868,33 @@
     ]
   },
   {
+    "title": "Có nên rửa mặt bằng nước muối?",
+    "content": "Bài viết thảo luận về việc sử dụng nước muối để rửa mặt, nhấn mạnh rằng nước muối có thể làm sạch da nhẹ nhàng nhưng không nên lạm dụng. Dù nước muối có một số lợi ích như tẩy tế bào chết, việc sử dụng thường xuyên có thể gây tổn hại cho da và làm trầm trọng thêm tình trạng mụn. Các chuyên gia khuyên nên dùng nước muối với nồng độ 0,9% và chỉ rửa mặt 1-2 lần mỗi tuần, đồng thời khuyên người có da dầu nên tìm đến bác sĩ da liễu để được tư vấn điều trị phù hợp.",
+    "link": "https://vnexpress.net/co-nen-rua-mat-bang-nuoc-muoi-4861195.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Có nên rửa mặt bằng nước muối không?",
+    "answers": [
+      {
+        "text": "Nên, nhưng chỉ thỉnh thoảng và với nồng độ thích hợp.",
+        "correct": true
+      },
+      {
+        "text": "Có, luôn luôn rửa mặt bằng nước muối mỗi ngày.",
+        "correct": false
+      },
+      {
+        "text": "Không, nước muối làm hỏng da ngay lập tức.",
+        "correct": false
+      },
+      {
+        "text": "Có thể, nhưng chỉ với nước muối biển mà thôi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Virus thủy đậu gây zona thần kinh tấn công não",
     "content": "Bà Thoa, 56 tuổi, đã mắc biến chứng viêm màng não do virus Varicella zoster (gây bệnh thủy đậu) tấn công não. Bà có triệu chứng đau đầu dữ dội, sốt cao và chóng mặt, và được điều trị khẩn cấp tại Bệnh viện Đa khoa Tâm Anh TP HCM. Dù virus này không phổ biến gây viêm não, nhưng nó có thể diễn tiến nhanh và nguy hiểm, đặc biệt ở người lớn tuổi và những người suy giảm miễn dịch. Sau 12 ngày điều trị, sức khỏe bà Thoa đã cải thiện và virus đã không còn trong dịch não tủy.",
     "link": "https://vnexpress.net/virus-thuy-dau-gay-zona-than-kinh-tan-cong-nao-4860734.html",
@@ -1836,33 +1921,6 @@
       },
       {
         "text": "Bệnh tim mạch",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Có nên rửa mặt bằng nước muối?",
-    "content": "Bài viết thảo luận về việc sử dụng nước muối để rửa mặt, nhấn mạnh rằng nước muối có thể làm sạch da nhẹ nhàng nhưng không nên lạm dụng. Dù nước muối có một số lợi ích như tẩy tế bào chết, việc sử dụng thường xuyên có thể gây tổn hại cho da và làm trầm trọng thêm tình trạng mụn. Các chuyên gia khuyên nên dùng nước muối với nồng độ 0,9% và chỉ rửa mặt 1-2 lần mỗi tuần, đồng thời khuyên người có da dầu nên tìm đến bác sĩ da liễu để được tư vấn điều trị phù hợp.",
-    "link": "https://vnexpress.net/co-nen-rua-mat-bang-nuoc-muoi-4861195.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Có nên rửa mặt bằng nước muối không?",
-    "answers": [
-      {
-        "text": "Nên, nhưng chỉ thỉnh thoảng và với nồng độ thích hợp.",
-        "correct": true
-      },
-      {
-        "text": "Có, luôn luôn rửa mặt bằng nước muối mỗi ngày.",
-        "correct": false
-      },
-      {
-        "text": "Không, nước muối làm hỏng da ngay lập tức.",
-        "correct": false
-      },
-      {
-        "text": "Có thể, nhưng chỉ với nước muối biển mà thôi.",
         "correct": false
       }
     ]
