--- a/home.html
+++ b/home.html
@@ -206,6 +206,37 @@
     ]
   },
   {
+    "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
+    "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
+    "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
+    "answers": [
+      {
+        "text": "Không, giai đoạn ủ bệnh không có triệu chứng rõ ràng.",
+        "correct": true
+      },
+      {
+        "text": "Có, có thể nhận biết qua triệu chứng sốt nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Có, có thể thấy mụn nước xuất hiện.",
+        "correct": false
+      },
+      {
+        "text": "Có, có thể nhận biết qua đau đầu và mệt mỏi.",
+        "correct": false
+      },
+      {
+        "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bí quyết giúp con giỏi tiếng Anh",
     "content": "Bài viết nhấn mạnh tầm quan trọng của việc học tiếng Anh trong thời đại ngày nay, khi mà việc thành thạo ngôn ngữ này đã trở thành điều thiết yếu cho trẻ em Việt Nam. Phụ huynh cần tạo ra môi trường học tập 100% tiếng Anh và khuyến khích trẻ giao tiếp hàng ngày để phát triển phản xạ ngôn ngữ tự nhiên. Đồng thời, phương pháp học tập chủ động như Discovery Learning cũng được khuyến khích để giúp trẻ phát triển kỹ năng sống và khả năng giao tiếp tự tin trong tương lai.",
     "link": "https://dantri.com.vn/giao-duc/bi-quyet-giup-con-gioi-tieng-anh-20250314162050005.htm",
@@ -233,32 +264,28 @@
     ]
   },
   {
-    "title": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
-    "content": "Trong giai đoạn ủ bệnh của thủy đậu, từ 10-21 ngày sau khi nhiễm virus, người bệnh không có triệu chứng rõ ràng nào để nhận biết. Thời gian lây nhiễm bắt đầu từ 1-2 ngày trước khi phát ban xuất hiện. Để phòng bệnh, tiêm vaccine là biện pháp hiệu quả nhất, và có ba loại vaccine thủy đậu hiện có tại Việt Nam. Người bệnh cần chăm sóc đúng cách và theo dõi các dấu hiệu để tránh biến chứng.",
-    "link": "https://vnexpress.net/co-the-nhan-biet-thuy-dau-trong-giai-doan-u-benh-khong-4861443.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có thể nhận biết thủy đậu trong giai đoạn ủ bệnh không?",
+    "title": "Techcombank dẫn dắt cuộc cách mạng tăng trưởng và đổi mới trong ngành ngân hàng",
+    "content": "Techcombank đã khẳng định vị thế dẫn đầu trong ngành ngân hàng với lợi nhuận trước thuế đạt 27.500 tỷ đồng, tăng 20,3% so với năm trước. Ngân hàng này đã đầu tư mạnh vào công nghệ như trí tuệ nhân tạo và máy học, giúp tối ưu hóa dịch vụ và thu hút gần 2 triệu khách hàng mới. Techcombank tiếp tục duy trì tỉ lệ CASA cao nhất trong ngành, củng cố vị thế cạnh tranh và mở rộng nguồn thu nhập ngoài lãi.",
+    "link": "https://tuoitre.vn/techcombank-dan-dat-cuoc-cach-mang-tang-truong-va-doi-moi-trong-nganh-ngan-hang-20250314192433628.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Techcombank đã đạt được những thành tựu gì trong năm 2024?",
     "answers": [
       {
-        "text": "Không, giai đoạn ủ bệnh không có triệu chứng rõ ràng.",
+        "text": "Lợi nhuận trước thuế tăng 20,3% và thu hút gần 2 triệu khách hàng mới.",
         "correct": true
       },
       {
-        "text": "Có, có thể nhận biết qua triệu chứng sốt nhẹ.",
+        "text": "Cắt giảm chi phí hoạt động đáng kể.",
         "correct": false
       },
       {
-        "text": "Có, có thể thấy mụn nước xuất hiện.",
+        "text": "Không có sự thay đổi nào trong chiến lược.",
         "correct": false
       },
       {
-        "text": "Có, có thể nhận biết qua đau đầu và mệt mỏi.",
-        "correct": false
-      },
-      {
-        "text": "Có, có thể thấy triệu chứng chảy nước mũi.",
+        "text": "Giảm tỉ lệ CASA xuống dưới 30%.",
         "correct": false
       }
     ]
@@ -415,6 +442,33 @@
     ]
   },
   {
+    "title": "Vô sinh sau 4 lần nạo hút thai",
+    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
+    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao chị Thùy lại bị vô sinh?",
+    "answers": [
+      {
+        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
+        "correct": true
+      },
+      {
+        "text": "Vì tuổi tác quá lớn",
+        "correct": false
+      },
+      {
+        "text": "Do không chăm sóc sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Vì không ăn uống đầy đủ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đồng đội cũ giàu gấp bảy lần Ronaldo",
     "content": "Louis Saha, cựu cầu thủ Man Utd, đã xây dựng một sự nghiệp kinh doanh thành công với công ty AxisStars, giúp gia sản của anh tăng lên 5,6 tỷ USD, gấp bảy lần tài sản của Cristiano Ronaldo, 780 triệu USD. Saha cùng Ronaldo đã thi đấu tại Man Utd từ 2004 đến 2008 và đã giành nhiều danh hiệu. Bên cạnh đó, Saha còn nhấn mạnh tầm quan trọng của việc hỗ trợ các cựu vận động viên trong việc tìm kiếm cơ hội nghề nghiệp sau khi giải nghệ.",
     "link": "https://vnexpress.net/dong-doi-cu-giau-gap-bay-lan-ronaldo-4861379.html",
@@ -441,33 +495,6 @@
       },
       {
         "text": "Đầu tư vào bất động sản",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vô sinh sau 4 lần nạo hút thai",
-    "content": "Chị Thùy, 36 tuổi, đã trải qua 4 lần nạo hút thai và gặp phải biến chứng dính lòng tử cung, dẫn đến tình trạng vô sinh. Sau khi được phẫu thuật nội soi để điều trị, chị đã có thai được 5 tuần. Các bác sĩ khuyến cáo rằng nạo hút thai có thể làm tăng nguy cơ vô sinh do tổn thương ở tử cung và hệ thống sinh sản. Phụ nữ nên đi khám định kỳ để phát hiện sớm các bất thường liên quan đến sức khỏe sinh sản.",
-    "link": "https://vnexpress.net/vo-sinh-sau-4-lan-nao-hut-thai-4861387.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao chị Thùy lại bị vô sinh?",
-    "answers": [
-      {
-        "text": "Do biến chứng dính lòng tử cung sau nhiều lần nạo hút thai",
-        "correct": true
-      },
-      {
-        "text": "Vì tuổi tác quá lớn",
-        "correct": false
-      },
-      {
-        "text": "Do không chăm sóc sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Vì không ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -1868,6 +1895,33 @@
     ]
   },
   {
+    "title": "Có nên rửa mặt bằng nước muối?",
+    "content": "Bài viết thảo luận về việc sử dụng nước muối để rửa mặt, nhấn mạnh rằng nước muối có thể làm sạch da nhẹ nhàng nhưng không nên lạm dụng. Dù nước muối có một số lợi ích như tẩy tế bào chết, việc sử dụng thường xuyên có thể gây tổn hại cho da và làm trầm trọng thêm tình trạng mụn. Các chuyên gia khuyên nên dùng nước muối với nồng độ 0,9% và chỉ rửa mặt 1-2 lần mỗi tuần, đồng thời khuyên người có da dầu nên tìm đến bác sĩ da liễu để được tư vấn điều trị phù hợp.",
+    "link": "https://vnexpress.net/co-nen-rua-mat-bang-nuoc-muoi-4861195.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Có nên rửa mặt bằng nước muối không?",
+    "answers": [
+      {
+        "text": "Nên, nhưng chỉ thỉnh thoảng và với nồng độ thích hợp.",
+        "correct": true
+      },
+      {
+        "text": "Có, luôn luôn rửa mặt bằng nước muối mỗi ngày.",
+        "correct": false
+      },
+      {
+        "text": "Không, nước muối làm hỏng da ngay lập tức.",
+        "correct": false
+      },
+      {
+        "text": "Có thể, nhưng chỉ với nước muối biển mà thôi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Virus thủy đậu gây zona thần kinh tấn công não",
     "content": "Bà Thoa, 56 tuổi, đã mắc biến chứng viêm màng não do virus Varicella zoster (gây bệnh thủy đậu) tấn công não. Bà có triệu chứng đau đầu dữ dội, sốt cao và chóng mặt, và được điều trị khẩn cấp tại Bệnh viện Đa khoa Tâm Anh TP HCM. Dù virus này không phổ biến gây viêm não, nhưng nó có thể diễn tiến nhanh và nguy hiểm, đặc biệt ở người lớn tuổi và những người suy giảm miễn dịch. Sau 12 ngày điều trị, sức khỏe bà Thoa đã cải thiện và virus đã không còn trong dịch não tủy.",
     "link": "https://vnexpress.net/virus-thuy-dau-gay-zona-than-kinh-tan-cong-nao-4860734.html",
@@ -1894,33 +1948,6 @@
       },
       {
         "text": "Bệnh tim mạch",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Có nên rửa mặt bằng nước muối?",
-    "content": "Bài viết thảo luận về việc sử dụng nước muối để rửa mặt, nhấn mạnh rằng nước muối có thể làm sạch da nhẹ nhàng nhưng không nên lạm dụng. Dù nước muối có một số lợi ích như tẩy tế bào chết, việc sử dụng thường xuyên có thể gây tổn hại cho da và làm trầm trọng thêm tình trạng mụn. Các chuyên gia khuyên nên dùng nước muối với nồng độ 0,9% và chỉ rửa mặt 1-2 lần mỗi tuần, đồng thời khuyên người có da dầu nên tìm đến bác sĩ da liễu để được tư vấn điều trị phù hợp.",
-    "link": "https://vnexpress.net/co-nen-rua-mat-bang-nuoc-muoi-4861195.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Có nên rửa mặt bằng nước muối không?",
-    "answers": [
-      {
-        "text": "Nên, nhưng chỉ thỉnh thoảng và với nồng độ thích hợp.",
-        "correct": true
-      },
-      {
-        "text": "Có, luôn luôn rửa mặt bằng nước muối mỗi ngày.",
-        "correct": false
-      },
-      {
-        "text": "Không, nước muối làm hỏng da ngay lập tức.",
-        "correct": false
-      },
-      {
-        "text": "Có thể, nhưng chỉ với nước muối biển mà thôi.",
         "correct": false
       }
     ]
