Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,33 @@
     ]
   },
   {
+    "title": "Nguyên Thứ trưởng Nông nghiệp và Phát triển nông thôn Hoàng Văn Thắng bị khai trừ Đảng",
+    "content": "Ông Hoàng Văn Thắng, nguyên Thứ trưởng Bộ Nông nghiệp và Phát triển nông thôn, đã bị Ban Bí thư khai trừ Đảng do vi phạm quy định của Đảng và pháp luật nhà nước. Cùng ngày, ông Nguyễn Thành Rum cũng bị khai trừ với các lý do tương tự. Cả hai ông đều bị cáo buộc suy thoái tư tưởng chính trị, vi phạm trách nhiệm trong phòng, chống tham nhũng, gây thiệt hại lớn cho ngân sách nhà nước. Ông Thắng cũng đang bị Bộ Công an điều tra về cáo buộc nhận hối lộ trong các dự án.",
+    "link": "https://vnexpress.net/nguyen-thu-truong-nong-nghiep-va-phat-trien-nong-thon-hoang-van-thang-bi-khai-tru-dang-4861499.html",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao ông Hoàng Văn Thắng bị khai trừ Đảng?",
+    "answers": [
+      {
+        "text": "Vì vi phạm quy định của Đảng và pháp luật nhà nước",
+        "correct": true
+      },
+      {
+        "text": "Vì ông không hoàn thành nhiệm vụ",
+        "correct": false
+      },
+      {
+        "text": "Vì ông nghỉ hưu sớm",
+        "correct": false
+      },
+      {
+        "text": "Vì ông không tham gia hoạt động đảng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "FPT mất vị trí doanh nghiệp tư nhân số 1 sàn chứng khoán Việt Nam vào tay Vingroup",
     "content": "FPT vừa mất vị trí doanh nghiệp tư nhân số một trên sàn chứng khoán Việt Nam vào tay Vingroup sau sự tăng trưởng mạnh mẽ của cổ phiếu VIC. Giá cổ phiếu FPT đã giảm 10% trong vòng một tháng qua, trong khi cổ phiếu VIC tăng gần 30%. Vốn hóa thị trường của Vingroup hiện đạt gần 200.000 tỉ đồng, trong khi vốn hóa của FPT giảm xuống còn hơn 193.200 tỉ đồng, dẫn đến việc FPT không còn giữ vị trí dẫn đầu như trước.",
     "link": "https://tuoitre.vn/fpt-mat-vi-tri-doanh-nghiep-tu-nhan-so-1-san-chung-khoan-viet-nam-vao-tay-vingroup-20250314182530519.htm",
@@ -1642,6 +1669,33 @@
     ]
   },
   {
+    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
+    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người mắc sốt xuất huyết có nên tắm không?",
+    "answers": [
+      {
+        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn không nên tắm.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
+        "correct": false
+      },
+      {
+        "text": "Có thể tắm nhưng không được gãi mạnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dấu hiệu khi đi bộ cảnh báo bệnh tiểu đường",
     "content": "Bài viết nêu rõ những dấu hiệu khi đi bộ có thể cảnh báo bệnh tiểu đường, bao gồm cảm giác tê, ngứa ran, chuột rút ở chân, mệt mỏi bất thường và sưng ở bàn chân. Những triệu chứng này có thể do bệnh thần kinh ngoại biên hoặc bệnh động mạch ngoại biên do tiểu đường gây ra. Việc phát hiện sớm những dấu hiệu này rất quan trọng để kiểm soát bệnh tiểu đường hiệu quả.",
     "link": "https://vnexpress.net/dau-hieu-khi-di-bo-canh-bao-benh-tieu-duong-4861192.html",
@@ -1668,33 +1722,6 @@
       },
       {
         "text": "Nôn mửa và tiêu chảy",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mắc sốt xuất huyết nổi ban có nên tắm?",
-    "content": "Người bệnh sốt xuất huyết có thể tắm bằng nước ấm, nhưng cần lưu ý không kỳ cọ mạnh và tránh nước lạnh để ngăn ngừa tình trạng xuất huyết dưới da. Việc tắm giúp cơ thể thông thoáng và sạch sẽ, nhưng nên thực hiện nhẹ nhàng trong môi trường kín gió. Bên cạnh đó, người bệnh cần duy trì chế độ dinh dưỡng tốt và theo dõi các triệu chứng để tránh biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/mac-sot-xuat-huyet-noi-ban-co-nen-tam-4861344.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người mắc sốt xuất huyết có nên tắm không?",
-    "answers": [
-      {
-        "text": "Có, nhưng cần tắm nhẹ nhàng bằng nước ấm.",
-        "correct": true
-      },
-      {
-        "text": "Không, hoàn toàn không nên tắm.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên tắm trong trường hợp có sốt nhẹ.",
-        "correct": false
-      },
-      {
-        "text": "Có thể tắm nhưng không được gãi mạnh.",
         "correct": false
       }
     ]
@@ -2836,6 +2863,33 @@
     ]
   },
   {
+    "title": "Người bệnh ung thư có nên kiêng thịt nướng?",
+    "content": "Người bệnh ung thư nên hạn chế tiêu thụ thịt nướng do các hợp chất độc hại có thể hình thành trong quá trình nướng, gây tăng nguy cơ mắc ung thư hoặc làm nặng thêm triệu chứng bệnh. Mặc dù không cần phải kiêng hoàn toàn, người bệnh nên ăn có chừng mực và ưu tiên các phương pháp chế biến lành mạnh hơn như hấp hoặc luộc. Việc tiêu thụ thịt nướng cần được kết hợp với nhiều rau củ và đủ nước để hỗ trợ tiêu hóa và giảm tác động tiêu cực của các chất độc hại. Chế độ ăn uống phù hợp sẽ giúp tăng cường hệ miễn dịch và hỗ trợ hồi phục sau điều trị.",
+    "link": "https://vnexpress.net/nguoi-benh-ung-thu-co-nen-kieng-thit-nuong-4861212.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người bệnh ung thư có nên kiêng thịt nướng không?",
+    "answers": [
+      {
+        "text": "Nên hạn chế tiêu thụ thịt nướng.",
+        "correct": true
+      },
+      {
+        "text": "Có thể ăn thoải mái thịt nướng.",
+        "correct": false
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Nên ăn thịt nướng hàng ngày.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Yếu tố thuyết phục khách nữ của Toyota Vios",
     "content": "Bài viết phân tích yếu tố thuyết phục khách hàng nữ khi chọn mua Toyota Vios, đặc biệt là những gia đình trẻ. Toyota Vios được ưa chuộng nhờ thiết kế hiện đại, tính năng an toàn cao và khả năng tiết kiệm nhiên liệu, phù hợp với nhu cầu của phụ nữ lái xe. Những công nghệ hỗ trợ lái và thiết kế tiện nghi của Vios đã giúp chiếc xe này trở thành lựa chọn hàng đầu trong phân khúc sedan cỡ B tại Việt Nam.",
     "link": "https://vnexpress.net/yeu-to-thuyet-phuc-khach-nu-cua-toyota-vios-4858857.html",
@@ -2862,33 +2916,6 @@
       },
       {
         "text": "Vì xe có nhiều màu sắc lựa chọn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người bệnh ung thư có nên kiêng thịt nướng?",
-    "content": "Người bệnh ung thư nên hạn chế tiêu thụ thịt nướng do các hợp chất độc hại có thể hình thành trong quá trình nướng, gây tăng nguy cơ mắc ung thư hoặc làm nặng thêm triệu chứng bệnh. Mặc dù không cần phải kiêng hoàn toàn, người bệnh nên ăn có chừng mực và ưu tiên các phương pháp chế biến lành mạnh hơn như hấp hoặc luộc. Việc tiêu thụ thịt nướng cần được kết hợp với nhiều rau củ và đủ nước để hỗ trợ tiêu hóa và giảm tác động tiêu cực của các chất độc hại. Chế độ ăn uống phù hợp sẽ giúp tăng cường hệ miễn dịch và hỗ trợ hồi phục sau điều trị.",
-    "link": "https://vnexpress.net/nguoi-benh-ung-thu-co-nen-kieng-thit-nuong-4861212.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người bệnh ung thư có nên kiêng thịt nướng không?",
-    "answers": [
-      {
-        "text": "Nên hạn chế tiêu thụ thịt nướng.",
-        "correct": true
-      },
-      {
-        "text": "Có thể ăn thoải mái thịt nướng.",
-        "correct": false
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Nên ăn thịt nướng hàng ngày.",
         "correct": false
       }
     ]
