--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "G7 cảnh báo trừng phạt Nga nếu từ chối lệnh ngừng bắn",
+    "content": "Các thành viên Nhóm G7 đã cảnh báo Nga về việc áp dụng các lệnh trừng phạt nếu Moscow không đồng ý với lệnh ngừng bắn tại Ukraine. Trong cuộc họp tại Charlevoix, Quebec, G7 kêu gọi Nga cần phản hồi tích cực và thực hiện các thỏa thuận an ninh để đảm bảo Ukraine có thể tự vệ. Bộ trưởng Tài chính Mỹ đã nhấn mạnh rằng Mỹ sẵn sàng tăng cường các biện pháp trừng phạt đối với Nga nếu cần thiết.",
+    "link": "https://dantri.com.vn/the-gioi/g7-canh-bao-trung-phat-nga-neu-tu-choi-lenh-ngung-ban-20250314203532745.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 8,
+    "question": "G7 đã cảnh báo điều gì đối với Nga nếu không đồng ý lệnh ngừng bắn?",
+    "answers": [
+      {
+        "text": "Nga sẽ phải đối mặt với các lệnh trừng phạt.",
+        "correct": true
+      },
+      {
+        "text": "Nga sẽ nhận được sự hỗ trợ từ G7.",
+        "correct": false
+      },
+      {
+        "text": "Nga sẽ được mời tham gia cuộc họp tiếp theo.",
+        "correct": false
+      },
+      {
+        "text": "Nga sẽ được miễn trừng phạt trong thời gian tới.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Con trai chủ tịch Techcombank sinh năm 1995 làm ‘thuyền trưởng’ Masterise Group",
     "content": "Ông Hồ Anh Minh, con trai của Hồ Hùng Anh - chủ tịch Techcombank, đã chính thức đảm nhiệm vị trí tổng giám đốc của Masterise Group từ đầu năm 2025. Sự thay đổi này diễn ra bất ngờ khi ông Minh thay thế ông Trần Hoài Việt Anh. Ông Minh, sinh năm 1995, hiện đang nắm giữ hơn 344 triệu cổ phiếu TCB, tương ứng 4,87% vốn của Techcombank, có tài sản ước tính gần 9.500 tỷ đồng trên sàn chứng khoán.",
     "link": "https://tuoitre.vn/con-trai-chu-tich-techcombank-sinh-nam-1995-lam-thuyen-truong-masterise-group-2025031420063673.htm",
@@ -1522,33 +1549,6 @@
     ]
   },
   {
-    "title": "6 vitamin, khoáng chất cần thiết cho não",
-    "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
-    "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những vitamin và khoáng chất nào cần thiết cho não?",
-    "answers": [
-      {
-        "text": "Vitamin D, B, magie, omega-3, kẽm",
-        "correct": true
-      },
-      {
-        "text": "Vitamin C, D, sắt",
-        "correct": false
-      },
-      {
-        "text": "Canxi, vitamin E, kali",
-        "correct": false
-      },
-      {
-        "text": "Vitamin B, A, kẽm, magie",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Béo phì nhưng suy dinh dưỡng do ăn kiêng sai cách",
     "content": "Chị Liên, 41 tuổi, nặng 67 kg, đã giảm béo bằng cách ăn kiêng khắc nghiệt nhưng vẫn bị béo phì và suy dinh dưỡng. Sau khi giảm cân bằng cách cắt giảm tinh bột và đồ ngọt, chị gặp phải tình trạng thiếu vitamin D và suy dinh dưỡng do không nạp đủ chất dinh dưỡng cần thiết. Bác sĩ khuyến cáo rằng chế độ ăn kiêng như vậy không hiệu quả và cần có kế hoạch ăn uống hợp lý hơn để giảm cân an toàn.",
     "link": "https://vnexpress.net/beo-phi-nhung-suy-dinh-duong-do-an-kieng-sai-cach-4861383.html",
@@ -1571,6 +1571,33 @@
       },
       {
         "text": "Chị Liên ăn quá nhiều thực phẩm chức năng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 vitamin, khoáng chất cần thiết cho não",
+    "content": "Bài viết nêu rõ 6 loại vitamin và khoáng chất thiết yếu cho não, bao gồm vitamin D, B, magie, omega-3 và kẽm, giúp cải thiện chức năng não, tăng cường trí nhớ và hỗ trợ sức khỏe tâm thần. Vitamin D hỗ trợ tâm trạng và bảo vệ não, magie giúp truyền thông điệp đến não, omega-3 có tác dụng chống viêm và hỗ trợ kiểm soát triệu chứng trầm cảm. Vitamin B và kẽm cũng đóng vai trò quan trọng trong việc duy trì sự cân bằng hormone và chức năng não.",
+    "link": "https://vnexpress.net/6-vitamin-khoang-chat-can-thiet-cho-nao-4861219.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những vitamin và khoáng chất nào cần thiết cho não?",
+    "answers": [
+      {
+        "text": "Vitamin D, B, magie, omega-3, kẽm",
+        "correct": true
+      },
+      {
+        "text": "Vitamin C, D, sắt",
+        "correct": false
+      },
+      {
+        "text": "Canxi, vitamin E, kali",
+        "correct": false
+      },
+      {
+        "text": "Vitamin B, A, kẽm, magie",
         "correct": false
       }
     ]
@@ -2380,33 +2407,6 @@
     ]
   },
   {
-    "title": "Có nên rửa mặt bằng nước muối?",
-    "content": "Bài viết thảo luận về việc sử dụng nước muối để rửa mặt, nhấn mạnh rằng nước muối có thể làm sạch da nhẹ nhàng nhưng không nên lạm dụng. Dù nước muối có một số lợi ích như tẩy tế bào chết, việc sử dụng thường xuyên có thể gây tổn hại cho da và làm trầm trọng thêm tình trạng mụn. Các chuyên gia khuyên nên dùng nước muối với nồng độ 0,9% và chỉ rửa mặt 1-2 lần mỗi tuần, đồng thời khuyên người có da dầu nên tìm đến bác sĩ da liễu để được tư vấn điều trị phù hợp.",
-    "link": "https://vnexpress.net/co-nen-rua-mat-bang-nuoc-muoi-4861195.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Có nên rửa mặt bằng nước muối không?",
-    "answers": [
-      {
-        "text": "Nên, nhưng chỉ thỉnh thoảng và với nồng độ thích hợp.",
-        "correct": true
-      },
-      {
-        "text": "Có, luôn luôn rửa mặt bằng nước muối mỗi ngày.",
-        "correct": false
-      },
-      {
-        "text": "Không, nước muối làm hỏng da ngay lập tức.",
-        "correct": false
-      },
-      {
-        "text": "Có thể, nhưng chỉ với nước muối biển mà thôi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Virus thủy đậu gây zona thần kinh tấn công não",
     "content": "Bà Thoa, 56 tuổi, đã mắc biến chứng viêm màng não do virus Varicella zoster (gây bệnh thủy đậu) tấn công não. Bà có triệu chứng đau đầu dữ dội, sốt cao và chóng mặt, và được điều trị khẩn cấp tại Bệnh viện Đa khoa Tâm Anh TP HCM. Dù virus này không phổ biến gây viêm não, nhưng nó có thể diễn tiến nhanh và nguy hiểm, đặc biệt ở người lớn tuổi và những người suy giảm miễn dịch. Sau 12 ngày điều trị, sức khỏe bà Thoa đã cải thiện và virus đã không còn trong dịch não tủy.",
     "link": "https://vnexpress.net/virus-thuy-dau-gay-zona-than-kinh-tan-cong-nao-4860734.html",
@@ -2433,6 +2433,33 @@
       },
       {
         "text": "Bệnh tim mạch",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Có nên rửa mặt bằng nước muối?",
+    "content": "Bài viết thảo luận về việc sử dụng nước muối để rửa mặt, nhấn mạnh rằng nước muối có thể làm sạch da nhẹ nhàng nhưng không nên lạm dụng. Dù nước muối có một số lợi ích như tẩy tế bào chết, việc sử dụng thường xuyên có thể gây tổn hại cho da và làm trầm trọng thêm tình trạng mụn. Các chuyên gia khuyên nên dùng nước muối với nồng độ 0,9% và chỉ rửa mặt 1-2 lần mỗi tuần, đồng thời khuyên người có da dầu nên tìm đến bác sĩ da liễu để được tư vấn điều trị phù hợp.",
+    "link": "https://vnexpress.net/co-nen-rua-mat-bang-nuoc-muoi-4861195.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Có nên rửa mặt bằng nước muối không?",
+    "answers": [
+      {
+        "text": "Nên, nhưng chỉ thỉnh thoảng và với nồng độ thích hợp.",
+        "correct": true
+      },
+      {
+        "text": "Có, luôn luôn rửa mặt bằng nước muối mỗi ngày.",
+        "correct": false
+      },
+      {
+        "text": "Không, nước muối làm hỏng da ngay lập tức.",
+        "correct": false
+      },
+      {
+        "text": "Có thể, nhưng chỉ với nước muối biển mà thôi.",
         "correct": false
       }
     ]
@@ -4041,33 +4068,6 @@
     ]
   },
   {
-    "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
-    "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
-    "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Dự án đường nối cao tốc với Phan Thiết có tổng vốn đầu tư bao nhiêu?",
-    "answers": [
-      {
-        "text": "Gần 7.000 tỷ đồng",
-        "correct": true
-      },
-      {
-        "text": "Trên 5.000 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "Dưới 6.000 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "Khoảng 10.000 tỷ đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Làng du lịch sinh thái Pơ mu xuống cấp",
     "content": "Làng du lịch sinh thái Pơ Mu, nằm ở huyện Tây Giang, Quảng Nam, hiện đang trong tình trạng xuống cấp nghiêm trọng. Mặc dù được xây dựng từ năm 2016 với 10 ngôi nhà sàn truyền thống nhằm phát triển du lịch cộng đồng, nhưng sau gần 10 năm, các ngôi nhà đã hư hỏng, không có người trông coi và không còn hoạt động. Dự án nâng cấp và cải tạo làng du lịch này đã được phê duyệt với kinh phí hơn 6 tỷ đồng, dự kiến hoàn thành vào năm 2026.",
     "link": "https://vnexpress.net/lang-du-lich-sinh-thai-po-mu-xuong-cap-4860923.html",
@@ -4090,6 +4090,33 @@
       },
       {
         "text": "Do không có khách du lịch đến thăm.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
+    "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
+    "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Dự án đường nối cao tốc với Phan Thiết có tổng vốn đầu tư bao nhiêu?",
+    "answers": [
+      {
+        "text": "Gần 7.000 tỷ đồng",
+        "correct": true
+      },
+      {
+        "text": "Trên 5.000 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "Dưới 6.000 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 10.000 tỷ đồng",
         "correct": false
       }
     ]
